--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Árni Dagur <arni@dagur.eu>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 keywords = ["kennitala", "icelandic"]
+repository = "https://github.com/ArniDagur/kennitolur"
 
 [features]
 default = ["chrono"]
